# lib_serial

./: CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
arch/: CMakeLists.txt
arch/linux/: CMakeLists.txt
arch/linux/include/: lib_serial_linux.h
arch/linux/src/: lib_serial_linux.c
arch/stm32/: CMakeLists.txt
arch/stm32/include/: lib_ser_init_itf.h  lib_serial_stm32.h
arch/stm32/internal_include/: serial_access_stm32.h
arch/stm32/src/: lib_ser_STM32.c  lib_serial_stm32.c  serial_access_stm32.c
cmake/: lib_serial-config.cmake  libserial-config.cmake
include/: lib_ser.h  lib_serial.h  lib_serial_types.h
